# plasma-mcp

./: .gitignore  Architecture.md  README.md  idea.md  pyproject.toml  verify.py
src/: agent.py  server.py  web_api.py
src/core/: indexer.py  parsers.py  rag.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  api.ts  index.css  types.ts
web/src/components/: ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  ColorToken.tsx
